--- a/pom.xml
+++ b/pom.xml
@@ -32,9 +32,9 @@
 		</dependency>
 
 		<dependency>
-			<groupId>com.mysql</groupId>
-			<artifactId>mysql-connector-j</artifactId>
-			<scope>runtime</scope>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>42.2.27</version> <!-- You can use a newer version if available -->
 		</dependency>
 
 		<dependency>
