--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,14 @@
-spring.datasource.url = jdbc:mysql://localhost:3306/employees_db
-spring.datasource.username=root
-spring.datasource.password=
-spring.jpa.show-sql= true
-spring.jpa.hibernate.ddl-auto = update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-spring.mvc.static-path-pattern=/uploads/**
-spring.web.resources.static-locations=file:uploads/
+    # PostgreSQL database configuration
+    spring.datasource.url=jdbc:postgresql://postgres:5432/employees_db
+    spring.datasource.username=postgres
+    spring.datasource.password=password
+    spring.datasource.driver-class-name=org.postgresql.Driver
 
+    # JPA settings
+    spring.jpa.show-sql=true
+    spring.jpa.hibernate.ddl-auto=update
+    spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+    # Static resource settings (if needed)
+    spring.mvc.static-path-pattern=/uploads/**
+    spring.web.resources.static-locations=file:uploads/
