feat: modify the postgres server and port

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
     # PostgreSQL database configuration
-    spring.datasource.url=jdbc:postgresql://postgres:5432/employees_db
+    spring.datasource.url=jdbc:postgresql://localhost:5432/employees_db
     spring.datasource.username=postgres
     spring.datasource.password=password
     spring.datasource.driver-class-name=org.postgresql.Driver
@@ -12,3 +12,5 @@
     # Static resource settings (if needed)
     spring.mvc.static-path-pattern=/uploads/**
     spring.web.resources.static-locations=file:uploads/
+
+server.port=8082
