--- a/pom.xml
+++ b/pom.xml
@@ -80,11 +80,11 @@
 	<distributionManagement>
 	    <repository>
 	        <id>nexus-releases</id>
-	        <url>http://172.24.0.4:8081/repository/maven-releases/</url>
+	        <url>http://nexus:8081/repository/maven-releases/</url>
 	    </repository>
 	    <snapshotRepository>
 	        <id>nexus-snapshots</id>
-	        <url>>http://172.24.0.4:8081/repository/maven-snapshots/</url>
+	        <url>>http://nexus:8081/repository/maven-snapshots/</url>
 	    </snapshotRepository>
 	</distributionManagement>
 
