--- a/pom.xml
+++ b/pom.xml
@@ -84,7 +84,7 @@
 	    </repository>
 	    <snapshotRepository>
 	        <id>nexus-snapshots</id>
-	        <url>>http://nexus:8081/repository/maven-snapshots/</url>
+	        <url>http://nexus:8081/repository/maven-snapshots/</url>
 	    </snapshotRepository>
 	</distributionManagement>
 
