--- a/deployment.yaml
+++ b/deployment.yaml
@@ -1,36 +1,37 @@
 apiVersion: apps/v1
-kind: Deployment # Kubernetes resource kind we are creating
+kind: Deployment
 metadata:
-  name: employeeManagement-deployment
+  name: employees-management
+  labels:
+    app: employees-management
 spec:
+  replicas: 1
   selector:
     matchLabels:
-      app: employeeManagement
-  replicas: 2 # Number of replicas that will be created for this deployment
+      app: employees-management
   template:
     metadata:
       labels:
-        app: employeeManagement
+        app: employees-management
     spec:
       containers:
-        - name: employeeManagement
-          image: fatimadev/employeeManagement:latest # Image that will be used to containers in the cluster
-          imagePullPolicy: Always
-          ports:
-            - containerPort: 8080 # The port that the container is running on in the cluster
-
-
+      - name: employees-management
+        image: fatimadev/employeesmanagement:latest
+        ports:
+        - containerPort: 8080
+        env:
+        - name: SPRING_PROFILES_ACTIVE
+          value: "prod"
 ---
-
-apiVersion: v1 # Kubernetes API version
-kind: Service # Kubernetes resource kind we are creating
-metadata: # Metadata of the resource kind we are creating
-  name: employeeManagement-ssvc
+apiVersion: v1
+kind: Service
+metadata:
+  name: employees-management-service
 spec:
+  type: NodePort
   selector:
-    app: employeeManagement
+    app: employees-management
   ports:
-    - protocol: "TCP"
-      port: 80
-      targetPort: 8080 
-  type: LoadBalancer # type of the service.
+  - port: 8080
+    targetPort: 8080
+    nodePort: 30100
